Fix: Blue button on safari

--- a/deps/css/login.css
+++ b/deps/css/login.css
@@ -16,6 +16,10 @@
 
 }
 
+button {
+    color: black;
+}
+
 body {
     background: var(--dark);
     display: flex;
