--- a/deps/css/main.css
+++ b/deps/css/main.css
@@ -13,6 +13,10 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+button {
+    color: black;
+}
+
 body {
     margin: 0;
     background: var(--dark);
